--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 aiofiles==23.2.1
+tz==2021.1
 aiohttp==3.9.2
+Flask==2.2.2
+gunicorn==20.1.0
 apscheduler==3.6.3
 asyncio==3.4.3
 beautifulsoup4==4.12.3
